--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -2,6 +2,9 @@ on:
     # push:
     #  branches: 
     #    - main
+    push: 
+        branches: 
+          - main
     schedule:
       - cron: '0 0 */2 * *' 
   
