--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -20,8 +20,14 @@ jobs:
               version: "*"
               enable-plugins: true
         -   uses: actions/checkout@v2
+        -   name: prepare
+            shell: nu {0}
+            run: |
+                nu -c '
+                  cargo install cargo-edit cargo-upgrades nu_plugin_inc -f
+                '
+                nu -c 'register ~/.cargo/nu_plugin_inc'
         -   name: Update Dependencies list
-            id: upd
             shell: nu {0}
             run: |
                 nu -c '
@@ -42,5 +48,4 @@ jobs:
                 
         -   uses: EndBug/add-and-commit@v9 
             with:
-                # add: Cargo.md # Only commit+push the output file 
                 author_name: GitHub-Action
