--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -26,8 +26,8 @@ jobs:
                 nu -c '
                   cargo install cargo-edit cargo-upgrades nu_plugin_inc -f
                 '
-                nu -c 'register ~/.cargo/nu_plugin_inc'
-        -   name: Update Dependencies list
+                nu -c 'register ~/.cargo/bin/nu_plugin_inc'
+        -   name: Update Dependencies
             shell: nu {0}
             run: |
                 nu -c '
