--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -25,11 +25,11 @@ jobs:
                 nu -c '
                   cargo install cargo-edit cargo-upgrades nu_plugin_inc -f
                 '
-                nu -c 'register /home/runner/.cargo/bin/nu_plugin_inc'
         -   name: Update Dependencies
             shell: nu {0}
             run: |
                 nu -c '
+                  register /home/runner/.cargo/bin/nu_plugin_inc
                   cargo upgrade
                   let changed = git status -s | is-empty | not $in
                   if ($changed) {
