--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -38,7 +38,7 @@ jobs:
                               | get package.version
                               | inc --patch
                           )
-                      | save Cargo.toml
+                      | save Cargo.toml -f
                   }
                   echo { "changed": $changed }
                 '
