--- a/.github/workflows/dependency-update.yaml
+++ b/.github/workflows/dependency-update.yaml
@@ -1,10 +1,5 @@
 on:
-    # push:
-    #  branches: 
-    #    - main
-    # push: 
-    #     branches: 
-    #       - main
+    workflow_dispatch:
     schedule:
       - cron: '0 0 */2 * *' 
   
