--- a/.github/workflows/publish_crate.yaml
+++ b/.github/workflows/publish_crate.yaml
@@ -25,3 +25,5 @@ jobs:
         uses: katyo/publish-crates@v2
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
