--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,28 @@
 [dependencies]
-nu-plugin = "0.105.1"
+nu-plugin = { version = "0.105.1" }
 
 [dependencies.notify-rust]
 version = "4.11.7"
 
 [dependencies.nu-protocol]
-features = ["plugin"]
+features = [
+  "plugin",
+]
 version = "0.105.1"
 
 [package]
-authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
+authors = [
+  "Motalleb Fallahnezhad <fmotalleb@gmail.com>",
+]
 description = "A nushell plugin to send desktop notifications"
 edition = "2021"
 homepage = "https://github.com/FMotalleb/nu_plugin_desktop_notifications"
-keywords = ["nushell", "desktop", "notification", "plugin"]
+keywords = [
+  "nushell",
+  "desktop",
+  "notification",
+  "plugin",
+]
 license = "MIT"
 name = "nu_plugin_desktop_notifications"
 readme = "README.md"
